Update index4 - Navbar Nenaff - 27-02-2021.html

--- a/index4 - Navbar Nenaff - 27-02-2021.html
+++ b/index4 - Navbar Nenaff - 27-02-2021.html
@@ -4,36 +4,45 @@
 	<meta charset='utf-8'>
 	<meta http-equiv='X-UA-Compatible' content='IE=edge'>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
 	<title>ArduiTank | Accueil</title>
 	<meta itemprop="name" content="ArduiTank | Accueil" />
 	<meta name="keywords" content="ArduiTank, Arduino, DIY, bois, 3D, modélisation, ISAT, EPHEC, AntoDB"/>
-	<link rel="apple-touch-icon" type="image/png" sizes="180x180" href="img/logo v2.2 min.png" class="next-head">
-	<link rel="icon" type="image/png" sizes="32x32" href="img/logo v2.2 min.png" class="next-head">
-	<link rel="icon" type="image/png" sizes="16x16" href="img/logo v2.2 min.png" class="next-head">
+
+	<link rel="apple-touch-icon" type="image/png" sizes="180x180" href="./img/Logo V2.2 min.png" class="next-head">
+	<link rel="icon" type="image/png" sizes="32x32" href="./img/Logo V2.2 min.png" class="next-head">
+	<link rel="icon" type="image/png" sizes="16x16" href="./img/Logo V2.2 min.png" class="next-head">
+
 	<link rel="canonical" href="https://arduitank.be" />
 	<link rel="shortlink" href="https://arduitank.be" />
+
 	<meta name="viewport" content="width=device-width, initial-scale=1" class="next-head">
 	<meta name="description" content="Bienvenue sur le site d'ArduiTank. Equipe de projet pour char robotisé et télécommandé." class="next-head">
+
 	<meta property="og:title" content="ArduiTank | Accueil" class="next-head"/>
 	<meta property="og:site_name" content="ArduiTank | Accueil" class="next-head" />
 	<meta property="og:type" content="website" class="next-head" />
 	<meta property="og:url" content="https://arduitank.be" class="next-head" />
 	<meta property="og:description" content="Bienvenue sur le site d'ArduiTank. Equipe de projet pour char robotisé et télécommandé.">
-	<meta property="og:image" content="img/banner.png" class="next-head">
+	<meta property="og:image" content="http://arduitank.be/img/logo%20V2.2.png" class="next-head">
+
 	<meta name="twitter:card" content="summary_large_image" class="next-head" />
 	<meta name="twitter:title" content="ArduiTank | Accueil" class="next-head" />
 	<meta name="twitter:url" content="https://arduitank.be" />
 	<meta name="twitter:description" content="Bienvenue sur le site d'ArduiTank. Equipe de projet pour char robotisé et télécommandé." class="next-head">
 	<meta name="twitter:creator" content="@ArduiTank" class="next-head">
-	<meta name="twitter:image:src" content="img/banner.png" class="next-head">
+	<meta name="twitter:image:src" content="http://arduitank.be/img/logo%20V2.2.png" class="next-head">
+
 	<meta name="dcterms.title" content="ArduiTank | Accueil" class="next-head" />
 	<meta name="dcterms.type" content="Text" class="next-head" />
 	<meta name="dcterms.format" content="text/html" class="next-head" />
 	<meta name="dcterms.identifier" content="https://arduitank.be" class="next-head" />
 	<meta name="dcterms.description" content="Bienvenue sur le site d'ArduiTank. Equipe de projet pour char robotisé et télécommandé." class="next-head">
+	
 	<!-- Bulma Version 0.7.4-->
-	<link rel="stylesheet" href="bulma_0-7-4/css/bulma.min.css" />
-	<link rel="stylesheet" href="bulma-modal-fx/dist/css/modal-fx.min.css" />
+	<link rel="stylesheet" href="https://unpkg.com/bulma@0.7.4/css/bulma.min.css" />
+	<link rel="stylesheet" href="https://unpkg.com/bulma-modal-fx/dist/css/modal-fx.min.css" />
+
 	<!-- Bootstrap Version 5.0.0 beta 1 -->
 	<!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" >-->
 	<!-- Fonts | Emotes -->
@@ -57,27 +66,27 @@
 		}
 		.background-model3D-chain {
 			/* The image used */
-			background-image: url(attachments/807610088361164810/812692985631735839/img_20210220_152752.jpg);
+			background-image: url(attachments/807610088361164810/812692985631735839/IMG_20210220_152752.jpg);
 		}
 		.background-blank-1chain {
 			/* The image user */
-			background-image: url(attachments/501009071365685249/812846520377933844/img_20210220_213332.jpg);
+			background-image: url(attachments/501009071365685249/812846520377933844/IMG_20210220_213332.jpg);
 		}
 		.background-2blanks-1chain {
 			/* The image used */
-			background-image: url(attachments/807610088361164810/812778846465949696/img_20210220_211229.jpg);
+			background-image: url(attachments/807610088361164810/812778846465949696/IMG_20210220_211229.jpg);
 		}
 		.background-2blanks-board {
 			/* The image used */
-			background-image: url(attachments/807610088361164810/813182685450338346/img_20210221_235425.jpg);
+			background-image: url(attachments/807610088361164810/813182685450338346/IMG_20210221_235425.jpg);
 		}
 		.background-2blanks-board-chain {
 			/* The image used */
-			background-image: url(attachments/807610088361164810/813182755088236544/img_20210221_235529.jpg);
+			background-image: url(attachments/807610088361164810/813182755088236544/IMG_20210221_235529.jpg);
 		}
 		.background-2blanks-board-reverse {
 			/* The image used */
-			background-image: url(attachments/807610088361164810/813182836126253116/img_20210221_235648.jpg);
+			background-image: url(attachments/807610088361164810/813182836126253116/IMG_20210221_235648.jpg);
 		}
 		/* Colors */
 		nav.navbar {
