--- a/index.html
+++ b/index.html
@@ -364,61 +364,85 @@
 										21/02/2021
 									</p>
 									<hr class="navbar-divider">
-									<a class="navbar-item" href="./#21022021-3">
-										Modélisation 3D - Pièce d'attache pour les planches arrière du tank
-									</a>
-									<a class="navbar-item" href="./#21022021-2">
-										Modélisation 3D - Télécommande
-									</a>
-									<a class="navbar-item" href="./#21022021-1">
-										Gravure de la planche du fond à la CNC
-									</a>
-									<hr class="navbar-divider">
-									<p class="navbar-item">
-										20/02/2021
-									</p>
-									<hr class="navbar-divider">
-									<a class="navbar-item" href="./#20022021-2">
-										Chaîne et engrenage & CNC flancs du tank
-									</a>
-									<a class="navbar-item" href="./#20022021-1">
-										Plan 2D, Télécommande
-									</a>
-									<hr class="navbar-divider">
-									<p class="navbar-item">
-										19/02/2021
-									</p>
-									<hr class="navbar-divider">
-									<a class="navbar-item" href="./#17022021-1">
-										Echec TPU, redesign
-									</a>
-									<hr class="navbar-divider">
-									<p class="navbar-item">
-										17/02/2021
-									</p>
-									<hr class="navbar-divider">
-									<a class="navbar-item" href="./#17022021-1">
-										Côté et importation des composants électronique du robot
-									</a>
-									<hr class="navbar-divider">
-									<p class="navbar-item">
-										16/02/2021
-									</p>
-									<hr class="navbar-divider">
-									<a class="navbar-item" href="./#16022021-1">
-										Chaîne et roues
-									</a>
-									<hr class="navbar-divider">
-									<p class="navbar-item">
-										10/02/2021
-									</p>
-									<hr class="navbar-divider">
-									<a class="navbar-item" href="./#10022021-2">
-										Reconnaissance vocale
-									</a>
-									<a class="navbar-item" href="./#10022021-1">
-										Nom de domaine
-									</a>
+									<div class="navbar-dropdown">
+										<div class="navbar-item dropdown is-hoverable">
+											<a class="navbar-link dropdown-trigger is-fullwidth"  style="width: 100%;">
+												21/02/2021
+											</a>
+											<div class="dropdown-menu drop2">
+												<a class="dropdown-item" href="index.html#21022021-3">
+													Modélisation 3D - Pièce d'attache pour les planches arrière du tank
+												</a>
+												<a class="dropdown-item" href="index.html#21022021-2">
+													Modélisation 3D - Télécommande
+												</a>
+												<a class="dropdown-item" href="index.html#21022021-1">
+													Gravure de la planche du fond à la CNC
+												</a>
+											</div>
+										</div>
+	
+										<div class="navbar-item dropdown is-hoverable">
+											<a class="navbar-link dropdown-trigger is-fullwidth"  style="width: 100%;">
+												20/02/2021
+											</a>
+											<div class="dropdown-menu drop2">
+												<a class="dropdown-item" href="index.html#20022021-2">
+													Chaîne et engrenage & CNC flancs du tank
+												</a>
+												<a class="dropdown-item" href="index.html#20022021-1">
+													Plan 2D, Télécommande
+												</a>
+											</div>
+										</div>
+	
+										<div class="navbar-item dropdown is-hoverable">
+											<a class="navbar-link dropdown-trigger is-fullwidth"  style="width: 100%;">
+												19/02/2021
+											</a>
+											<div class="dropdown-menu drop2">
+												<a class="dropdown-item" href="index.html#17022021-1">
+													Echec TPU, redesign
+												</a>
+											</div>
+										</div>
+	
+										<div class="navbar-item dropdown is-hoverable">
+											<a class="navbar-link dropdown-trigger is-fullwidth"  style="width: 100%;">
+												17/02/2021
+											</a>
+											<div class="dropdown-menu drop2">
+												<a class="dropdown-item" href="index.html#17022021-1">
+													Côté et importation des composants électronique du robot
+												</a>
+											</div>
+										</div>
+	
+										<div class="navbar-item dropdown is-hoverable">
+											<a class="navbar-link dropdown-trigger is-fullwidth"  style="width: 100%;">
+												16/02/2021
+											</a>
+											<div class="dropdown-menu drop2">
+												<a class="dropdown-item" href="index.html#16022021-1">
+													Chaîne et roues
+												</a>
+											</div>
+										</div>
+	
+										<div class="navbar-item dropdown is-hoverable">
+											<a class="navbar-link dropdown-trigger is-fullwidth"  style="width: 100%;">
+												10/02/2021
+											</a>
+											<div class="dropdown-menu drop2">
+												<a class="dropdown-item" href="index.html#10022021-2">
+													Reconnaissance vocale
+												</a>
+												<a class="dropdown-item" href="index.html#10022021-1">
+													Nom de domaine
+												</a>
+											</div>
+										</div>
+									</div>
 								</div>
 							</div>
 							<a class="navbar-item" href="./#galerie">
