--- a/index.html
+++ b/index.html
@@ -112,6 +112,19 @@
 			border-color: #00b89c;
 		}
 
+		.dropdown-menu.drop2 a:hover {
+			color: gray;
+		}
+		.dropdown-menu.drop2 a {
+			color: white;
+		}
+		.dropdown-menu.drop2 {
+			background-color: #545454;
+			margin-left: 150px;
+			margin-top: -44px;
+		}
+
+
 		.content h1, .content h3, .content h5 {
 			color: white;
 		}
