--- a/index.html
+++ b/index.html
@@ -375,6 +375,31 @@
 									<div class="navbar-dropdown">
 										<div class="navbar-item dropdown is-hoverable">
 											<a class="navbar-link dropdown-trigger is-fullwidth"  style="width: 100%;">
+												22/02/2021
+											</a>
+											<div class="dropdown-menu drop2">
+												<a class="navbar-item" href="./#22022021-6">
+													Site - État actuel et animations
+												</a>
+												<a class="navbar-item" href="./#22022021-5">
+													Modélisation 3D - Pièce d'attache des trois planches du dessus et maintient de la planche arrière
+												</a>
+												<a class="navbar-item" href="./#22022021-4">
+													Changement de moteur & code
+												</a>
+												<a class="navbar-item" href="./#22022021-3">
+													CNC - Suite découpe des planches derrière le tank
+												</a>
+												<a class="navbar-item" href="./#22022021-2">
+													Modélisation 3D - Télécommande
+												</a>
+												<a class="navbar-item" href="./#22022021-1">
+													Impression 3D de la pièce d'attache pour les planches arrière du tank & découpe CNC des planches
+												</a>
+											</div>
+										</div>
+										<div class="navbar-item dropdown is-hoverable">
+											<a class="navbar-link dropdown-trigger is-fullwidth"  style="width: 100%;">
 												21/02/2021
 											</a>
 											<div class="dropdown-menu drop2">
