--- a/index.html
+++ b/index.html
@@ -293,86 +293,26 @@
 								</a>
 						
 								<div class="navbar-dropdown">
-									<!--<div class="navbar-item has-dropdown is-hoverable">
-										<a class="navbar-link">
-											21/02/2021
-										</a>
-								
-										<div class="navbar-dropdown drop2">
-											<a class="navbar-item" href="./#21022021-3">
-												Modélisation 3D - Pièce d'attache pour les planches arrière du tank
+									<div class="navbar-dropdown">
+										<div class="navbar-item dropdown is-hoverable">
+											<a class="navbar-link dropdown-trigger is-fullwidth"  style="width: 100%;">
+												23/02/2021
 											</a>
-											<a class="navbar-item" href="./#21022021-2">
-												Modélisation 3D - Télécommande
-											</a>
-											<a class="navbar-item" href="./#21022021-1">
-												Gravure de la planche du fond à la CNC
-											</a>
-										</div>
-									</div>-->
-									<div class="dropdown">
-										<div class="dropdown-trigger">
-											<button class="button" aria-haspopup="true" aria-controls="dropdown-menu3">
-												<span>21/02/2021</span>
-												<span class="icon is-small">
-													<i class="fas fa-angle-down" aria-hidden="true"></i>
-												</span>
-										</button>
-										</div>
-											<div class="dropdown-menu" id="dropdown-menu3" role="menu">
-												<div class="dropdown-content">
-													<a class="dropdown-item" href="./#21022021-3">
-														Modélisation 3D - Pièce d'attache pour les planches arrière du tank
-													</a>
-													<a class="dropdown-item" href="./#21022021-2">
-														Modélisation 3D - Télécommande
-													</a>
-													<a class="dropdown-item" href="./#21022021-1">
-														Gravure de la planche du fond à la CNC
-													</a>
-												</div>
+											<div class="dropdown-menu drop2">
+												<a class="navbar-item" href="./#23022021-4">
+													Impression 3D - Roue crantée pour le servo moteur (axe horizontale) & Support du roulement avec les fils
+												</a>
+												<a class="navbar-item" href="./#23022021-3">
+													CNC - Planches du dessus de la base du tank
+												</a>
+												<a class="navbar-item" href="./#23022021-2">
+													Test du microcontrôleur
+												</a>
+												<a class="navbar-item" href="./#23022021-1">
+													Impression 3D - Pièce d'attache des planches supérieures
+												</a>
 											</div>
 										</div>
-									<p class="navbar-item">
-										23/02/2021
-									</p>
-									<hr class="navbar-divider">
-									<a class="navbar-item" href="./#23022021-4">
-										Impression 3D - Roue crantée pour le servo moteur (axe horizontale) & Support du roulement avec les fils
-									</a>
-									<a class="navbar-item" href="./#23022021-3">
-										CNC - Planches du dessus de la base du tank
-									</a>
-									<a class="navbar-item" href="./#23022021-2">
-										Test du microcontrôleur
-									</a>
-									<a class="navbar-item" href="./#23022021-1">
-										Impression 3D - Pièce d'attache des planches supérieures
-									</a>
-									<hr class="navbar-divider">
-									<p class="navbar-item">
-										22/02/2021
-									</p>
-									<hr class="navbar-divider">
-									<a class="navbar-item" href="./#22022021-6">
-										Site - État actuel et animations
-									</a>
-									<a class="navbar-item" href="./#22022021-5">
-										Modélisation 3D - Pièce d'attache des trois planches du dessus et maintient de la planche arrière
-									</a>
-									<a class="navbar-item" href="./#22022021-4">
-										Changement de moteur & code
-									</a>
-									<a class="navbar-item" href="./#22022021-3">
-										CNC - Suite découpe des planches derrière le tank
-									</a>
-									<a class="navbar-item" href="./#22022021-2">
-										Modélisation 3D - Télécommande
-									</a>
-									<a class="navbar-item" href="./#22022021-1">
-										Impression 3D de la pièce d'attache pour les planches arrière du tank & découpe CNC des planches
-									</a>
-									<div class="navbar-dropdown">
 										<div class="navbar-item dropdown is-hoverable">
 											<a class="navbar-link dropdown-trigger is-fullwidth"  style="width: 100%;">
 												22/02/2021
