--- a/index.html
+++ b/index.html
@@ -294,6 +294,16 @@
 								<div class="navbar-dropdown">
 									<div class="navbar-item dropdown is-hoverable">
 										<a class="navbar-link dropdown-trigger is-fullwidth"  style="width: 100%;">
+											24/02/2021
+										</a>
+										<div class="dropdown-menu drop2">
+											<a class="navbar-item" href="./#24022021-1">
+												Arrivée des moteurs
+											</a>
+										</div>
+									</div>
+									<div class="navbar-item dropdown is-hoverable">
+										<a class="navbar-link dropdown-trigger is-fullwidth"  style="width: 100%;">
 											23/02/2021
 										</a>
 										<div class="dropdown-menu drop2">
@@ -580,6 +590,20 @@
 					<p>Vous pouvez voir toutes les étapes à la réalisation du robot.</p>
 				</div>
 				<!-- 26/02/2021 : Site - Grace à l'aide d'une personne extérieure, le responsive est fonctionnel -->
+				<button type="button" class="collapsible" id="24022021-1">24/02/2021 - Arrivée des moteurs</button>
+				<div class="content collapse is-medium">
+					<p style="padding: 1rem 18px 0 18px;">Aquiquebouh ! En voila des moteurs près à faire décoller notre ArduiTank !</p>
+					<p style="padding: 0 18px;">Malheureusement, il restera terreste même si on aurait bien aimé l'envoyer dans l'espace comme l'un de notre concurent (Tesla).</p>
+					<div class="tile is-ancestor" style="padding: 0 18px 2rem 18px;">
+						<div class="tile is-parent is-horizontal">
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/814119787780898846/IMG_20210224_140014.jpg" alt="Test du microcontrôleur" style="padding: 0;">
+								</figure>
+							</div>
+						</div>
+					</div>
+				</div>
 				<button type="button" class="collapsible" id="23022021-4">23/02/2021 - Impression 3D - Roue crantée pour le servo moteur (axe horizontale) & Support du roulement avec les fils</button>
 				<div class="content collapse is-medium">
 					<p style="padding: 1rem 18px 0 18px;">Qu'est-ce que l'on carbure !! On s'alimente peut-être à l'uranium haha !</p>
