--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
 										</a>
 										<div class="dropdown-menu drop2">
 											<a class="dropdown-item" href="index.html#17022021-1">
-												Côté et importation des composants électronique du robot
+												Côté et importation des composants électroniques du robot
 											</a>
 										</div>
 									</div>
@@ -1027,7 +1027,7 @@
 					<p style="padding: 0 18px 2rem 18px;">C'est que cela prend forme tout ça !! Une nuit et tout sera imrpimé ! :p</p>
 				</div>
 
-				<button type="button" class="collapsible" id="17022021-1" style="transition-delay: 0s;">17/02/2021 - Modélisation 3D - Côté et importation des composants électronique du robot</button>
+				<button type="button" class="collapsible" id="17022021-1" style="transition-delay: 0s;">17/02/2021 - Modélisation 3D - Côté et importation des composants électroniques du robot</button>
 				<div class="content collapse is-medium">
 					<p style="padding: 1rem 18px 0 18px;">Hop la boum ! La suite continue !</p>
 					<p style="padding: 0 18px;">Davide est en forme et continue à modéliser tout ça !</p>
