--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@
 				<!-- 26/02/2021 : Site - Grace à l'aide d'une personne extérieure, le responsive est fonctionnel -->
 				<button type="button" class="collapsible" id="24022021-1">24/02/2021 - Arrivée des moteurs</button>
 				<div class="content collapse is-medium">
-					<p style="padding: 1rem 18px 0 18px;">Aquiquebouh ! En voila des moteurs près à faire décoller notre ArduiTank !</p>
+					<p style="padding: 1rem 18px 0 18px;">Aquiquebouh ! En voila des moteurs prêt à faire décoller notre ArduiTank !</p>
 					<p style="padding: 0 18px;">Malheureusement, il restera terreste même si on aurait bien aimé l'envoyer dans l'espace comme l'un de notre concurent (Tesla).</p>
 					<div class="tile is-ancestor" style="padding: 0 18px 2rem 18px;">
 						<div class="tile is-parent is-horizontal">
