--- a/index.html
+++ b/index.html
@@ -297,6 +297,11 @@
 											24/02/2021
 										</a>
 										<div class="dropdown-menu drop2">
+											<a class="navbar-item" href="./#24022021-2">
+												CNC - Plaque tournante de la tourelle
+											</a>
+										</div>
+										<div class="dropdown-menu drop2">
 											<a class="navbar-item" href="./#24022021-1">
 												Arrivée des moteurs
 											</a>
@@ -590,6 +595,30 @@
 					<p>Vous pouvez voir toutes les étapes à la réalisation du robot.</p>
 				</div>
 				<!-- 26/02/2021 : Site - Grace à l'aide d'une personne extérieure, le responsive est fonctionnel -->
+				<button type="button" class="collapsible" id="24022021-2">24/02/2021 - CNC - Plaque tournante de la tourelle</button>
+				<div class="content collapse is-medium">
+					<p style="padding: 1rem 18px 0 18px;">Quand on disait que l'on n'arrêtait pas Davide...</p>
+					<p style="padding: 0 18px;">La plaque dentée qui servira à faire tourner la tourelle grâce au servomoteur est donc modélisée pour la CNC de Davide.</p>
+					<div class="tile is-ancestor">
+						<div class="tile is-parent is-horizontal">
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/814125051862450246/unknown.png" alt="Plaque tournante tourelle modélisation" style="padding: 0;">
+								</figure>
+							</div>
+						</div>
+					</div>
+					<p style="padding: 0 18px;">Hé donc, plus tard dans la journée, la plaque tournante fut découpée et installée sur le tank !</p>
+					<div class="tile is-ancestor" style="padding: 0 18px 2rem 18px;">
+						<div class="tile is-parent is-horizontal">
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/814136255594889276/IMG_20210224_150550.jpg" alt="Plaque tournante tourelle sur tank" style="padding: 0;">
+								</figure>
+							</div>
+						</div>
+					</div>
+				</div>
 				<button type="button" class="collapsible" id="24022021-1">24/02/2021 - Arrivée des moteurs</button>
 				<div class="content collapse is-medium">
 					<p style="padding: 1rem 18px 0 18px;">Aquiquebouh ! En voila des moteurs prêt à faire décoller notre ArduiTank !</p>
@@ -598,7 +627,7 @@
 						<div class="tile is-parent is-horizontal">
 							<div class="tile is-child">
 								<figure class="image">
-									<img src="https://cdn.discordapp.com/attachments/807610088361164810/814119787780898846/IMG_20210224_140014.jpg" alt="Test du microcontrôleur" style="padding: 0;">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/814119787780898846/IMG_20210224_140014.jpg" alt="Boite nouveaux moteurs" style="padding: 0;">
 								</figure>
 							</div>
 						</div>
