--- a/index.html
+++ b/index.html
@@ -297,6 +297,11 @@
 											24/02/2021
 										</a>
 										<div class="dropdown-menu drop2">
+											<a class="navbar-item" href="./#24022021-3">
+												Changement des moteurs
+											</a>
+										</div>
+										<div class="dropdown-menu drop2">
 											<a class="navbar-item" href="./#24022021-2">
 												CNC - Plaque tournante de la tourelle
 											</a>
@@ -595,6 +600,59 @@
 					<p>Vous pouvez voir toutes les étapes à la réalisation du robot.</p>
 				</div>
 				<!-- 26/02/2021 : Site - Grace à l'aide d'une personne extérieure, le responsive est fonctionnel -->
+				<button type="button" class="collapsible" id="24022021-3">24/02/2021 - Changement des moteurs</button>
+				<div class="content collapse is-medium">
+					<p style="padding: 1rem 18px 0 18px;">Comme vous l'avez peut-être remarqué dans la précédente actualité, nous avions encore les plaques pour les moteurs pas à pas.</p>
+					<p style="padding: 0 18px;">On pouvait encore voir un moteur pas à pas qui y était rataché.</p>
+					<p style="padding: 0 18px;">Tel des garagistes aguerris, nous avons démonté le moteur et les plaques. Puis nous avons placé les nouvelles plaques latérales !</p>
+					<div class="tile is-ancestor">
+						<div class="tile is-parent is-horizontal">
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/814144967798161418/IMG_20210224_153020.jpg" alt="Démontage plaques latérales" style="padding: 0;">
+								</figure>
+							</div>
+						</div>
+						<div class="tile is-parent is-horizontal">
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://media.discordapp.net/attachments/807610088361164810/814179743339249754/IMG_20210224_175803.jpg" alt="Nouvelles plaques latérales placées" style="padding: 0;">
+								</figure>
+							</div>
+						</div>
+					</div>
+					<p style="padding: 0 18px;">Enfin, plus tard dans la journée, Davide a trouvé des vis assez longues pour pouvoir fixer les motoréducteurs.</p>
+					<p style="padding: 0 18px;">Nous les avons attachés avec les impressions 3D qui vont maintenir les plaques de devant.</p>
+					<div class="tile is-ancestor" style="padding: 0 18px;">
+						<div class="tile is-parent is-horizontal">
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://media.discordapp.net/attachments/807610088361164810/814209468208250930/IMG_20210224_195523.jpg?width=901&height=676" alt="Vis pour moteurs" style="padding: 0;">
+								</figure>
+							</div>
+						</div>
+					</div>
+					<div class="tile is-ancestor" style="padding: 0 18px;">
+						<div class="tile is-parent is-horizontal">
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://media.discordapp.net/attachments/807610088361164810/814237212257419264/IMG_20210224_214702.jpg" alt="Moteurs placés" style="padding: 0;">
+								</figure>
+							</div>
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://media.discordapp.net/attachments/807610088361164810/814237585949589544/IMG_20210224_214826.jpg" alt="Moteurs placés" style="padding: 0;">
+								</figure>
+							</div>
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://media.discordapp.net/attachments/807610088361164810/814245434838745098/IMG_20210224_221911.jpg" alt="Moteurs placés" style="padding: 0;">
+								</figure>
+							</div>
+						</div>
+					</div>
+					<p style="padding: 0 18px 2rem 18px;">SPOILER : Nous ne sommes pas des garagistes. Qui donc vous aurait faire croire ça ? 🙄</p>
+				</div>
 				<button type="button" class="collapsible" id="24022021-2">24/02/2021 - CNC - Plaque tournante de la tourelle</button>
 				<div class="content collapse is-medium">
 					<p style="padding: 1rem 18px 0 18px;">Quand on disait que l'on n'arrêtait pas Davide...</p>
