--- a/index.html
+++ b/index.html
@@ -623,7 +623,15 @@
 						<div class="tile is-parent is-horizontal">
 							<div class="tile is-child">
 								<figure class="image">
+								</figure>
+							</div>
+							<div class="tile is-child">
+								<figure class="image">
 									<img src="https://media.discordapp.net/attachments/807610088361164810/814209468208250930/IMG_20210224_195523.jpg?width=901&height=676" alt="Vis pour moteurs" style="padding: 0;">
+								</figure>
+							</div>
+							<div class="tile is-child">
+								<figure class="image">
 								</figure>
 							</div>
 						</div>
@@ -1331,6 +1339,52 @@
 						<div class="tile is-child">
 							<figure class="image">
 								<img src="https://cdn.discordapp.com/attachments/807610088361164810/813909999154888724/IMG_20210223_235513.jpg" alt="Maintient roulement dans la planche, tank de côté">
+							</figure>
+						</div>
+					</div>
+				</div>
+				<div class="tile is-ancestor">
+					<div class="tile is-parent is-horizontal">
+						<div class="tile is-child">
+							<figure class="image">
+								<img src="https://cdn.discordapp.com/attachments/807610088361164810/814119787780898846/IMG_20210224_140014.jpg" alt="Boite nouveaux moteurs">
+							</figure>
+						</div>
+					</div>
+					<div class="tile is-parent is-horizontal">
+						<div class="tile is-child">
+							<figure class="image">
+								<img src="https://cdn.discordapp.com/attachments/807610088361164810/814136255594889276/IMG_20210224_150550.jpg" alt="Plaque tournante tourelle sur tank">
+							</figure>
+						</div>
+					</div>
+					<div class="tile is-parent is-horizontal">
+						<div class="tile is-child">
+							<figure class="image">
+								<img src="https://cdn.discordapp.com/attachments/807610088361164810/814144967798161418/IMG_20210224_153020.jpg" alt="Démontage plaques latérales">
+							</figure>
+						</div>
+					</div>
+				</div>
+				<div class="tile is-ancestor">
+					<div class="tile is-parent is-horizontal">
+						<div class="tile is-child">
+							<figure class="image">
+								<img src="https://media.discordapp.net/attachments/807610088361164810/814179743339249754/IMG_20210224_175803.jpg" alt="Nouvelles plaques latérales placées">
+							</figure>
+						</div>
+					</div>
+					<div class="tile is-parent is-horizontal">
+						<div class="tile is-child">
+							<figure class="image">
+								<img src="https://media.discordapp.net/attachments/807610088361164810/814237212257419264/IMG_20210224_214702.jpg" alt="Moteurs placés">
+							</figure>
+						</div>
+					</div>
+					<div class="tile is-parent is-horizontal">
+						<div class="tile is-child">
+							<figure class="image">
+								
 							</figure>
 						</div>
 					</div>
