--- a/index.html
+++ b/index.html
@@ -294,6 +294,16 @@
 								<div class="navbar-dropdown">
 									<div class="navbar-item dropdown is-hoverable">
 										<a class="navbar-link dropdown-trigger is-fullwidth"  style="width: 100%;">
+											25/02/2021
+										</a>
+										<div class="dropdown-menu drop2">
+											<a class="navbar-item" href="./#25022021-1">
+												"Hack" du servomoteur
+											</a>
+										</div>
+									</div>
+									<div class="navbar-item dropdown is-hoverable">
+										<a class="navbar-link dropdown-trigger is-fullwidth"  style="width: 100%;">
 											24/02/2021
 										</a>
 										<div class="dropdown-menu drop2">
@@ -596,6 +606,27 @@
 					<p>Vous pouvez voir toutes les étapes à la réalisation du robot.</p>
 				</div>
 				<!-- 26/02/2021 : Site - Grace à l'aide d'une personne extérieure, le responsive est fonctionnel -->
+				<button type="button" class="collapsible" id="25022021-1">25/02/2021 - "Hack" du servomoteur</button>
+				<div class="content collapse is-medium">
+					<p style="padding: 1rem 18px 0 18px;">Hé ouais on "hack" des servomoteurs nous ! Plus rien ne nous arrête (c'est faux).</p>
+					<p style="padding: 0 18px;">En fait, nous n'avons pas besoin de savoir la positition de la tourelle et nous voulons que celle-ci puisse tourner à l'infini.</p>
+					<p style="padding: 0 18px;">C'est pourquoi on démonte le l'armature du servomoteur pour se câbler directement sur le moteur. Nous laissons tout le reste tel quel, on ne sait jamais !</p>
+					<p style="padding: 0 18px;">Ce sera comme si nous avions un motoréducteur simplement.</p>
+					<div class="tile is-ancestor" style="padding: 0 18px 2rem 18px;">
+						<div class="tile is-parent is-horizontal">
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/814570354747637811/IMG_20210225_195014.jpg" alt="Hack servomoteur" style="padding: 0;">
+								</figure>
+							</div>
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/814570683316830239/IMG_20210225_195223.jpg" alt="Hack servomoteur" style="padding: 0;">
+								</figure>
+							</div>
+						</div>
+					</div>
+				</div>
 				<button type="button" class="collapsible" id="24022021-3">24/02/2021 - Changement des moteurs</button>
 				<div class="content collapse is-medium">
 					<p style="padding: 1rem 18px 0 18px;">Comme vous l'avez peut-être remarqué dans la précédente actualité, nous avions encore les plaques pour les moteurs pas à pas.</p>
@@ -1384,7 +1415,7 @@
 					<div class="tile is-parent is-horizontal">
 						<div class="tile is-child">
 							<figure class="image">
-								
+								<img src="https://cdn.discordapp.com/attachments/807610088361164810/814570683316830239/IMG_20210225_195223.jpg" alt="Hack servomoteur">
 							</figure>
 						</div>
 					</div>
