--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
 					<p style="padding: 0 18px;">En fait, nous n'avons pas besoin de savoir la positition de la tourelle et nous voulons que celle-ci puisse tourner à l'infini.</p>
 					<p style="padding: 0 18px;">C'est pourquoi on démonte le l'armature du servomoteur pour se câbler directement sur le moteur. Nous laissons tout le reste tel quel, on ne sait jamais !</p>
 					<p style="padding: 0 18px;">Ce sera comme si nous avions un motoréducteur simplement.</p>
-					<div class="tile is-ancestor" style="padding: 0 18px 2rem 18px;">
+					<div class="tile is-ancestor" style="padding: 0 18px">
 						<div class="tile is-parent is-horizontal">
 							<div class="tile is-child">
 								<figure class="image">
@@ -623,6 +623,19 @@
 								<figure class="image">
 									<img src="https://cdn.discordapp.com/attachments/807610088361164810/814570683316830239/IMG_20210225_195223.jpg" alt="Hack servomoteur" style="padding: 0;">
 								</figure>
+							</div>
+						</div>
+					</div>
+					<p style="padding: 0 18px;">Création d'un petit code et hop, on test !</p>
+					<div class="tile is-ancestor" style="padding: 0 18px 2rem 18px;">
+						<div class="tile is-parent is-horizontal">
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/814588793599295508/VID_20210225_205915000.mp4" alt="Hack servomoteur" style="padding: 0;">
+								</figure>
+								<video width="320" height="240" controls>
+									<source src="https://cdn.discordapp.com/attachments/807610088361164810/814588793599295508/VID_20210225_205915000.mp4" type=video/mp4>
+								</video>
 							</div>
 						</div>
 					</div>
