--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
 					<p style="padding: 0 18px;">En fait, nous n'avons pas besoin de savoir la positition de la tourelle et nous voulons que celle-ci puisse tourner à l'infini.</p>
 					<p style="padding: 0 18px;">C'est pourquoi on démonte le l'armature du servomoteur pour se câbler directement sur le moteur. Nous laissons tout le reste tel quel, on ne sait jamais !</p>
 					<p style="padding: 0 18px;">Ce sera comme si nous avions un motoréducteur simplement.</p>
-					<div class="tile is-ancestor" style="padding: 0 18px">
+					<div class="tile is-ancestor">
 						<div class="tile is-parent is-horizontal">
 							<div class="tile is-child">
 								<figure class="image">
@@ -631,7 +631,9 @@
 						<div class="tile is-parent is-horizontal">
 							<div class="tile is-child">
 								<figure class="image">
-									<img src="https://cdn.discordapp.com/attachments/807610088361164810/814588793599295508/VID_20210225_205915000.mp4" alt="Hack servomoteur" style="padding: 0;">
+									<video width="320" height="240" controls>
+										<source src="https://cdn.discordapp.com/attachments/807610088361164810/814588793599295508/VID_20210225_205915000.mp4" type=video/mp4>
+									</video>
 								</figure>
 								<video width="320" height="240" controls>
 									<source src="https://cdn.discordapp.com/attachments/807610088361164810/814588793599295508/VID_20210225_205915000.mp4" type=video/mp4>
