--- a/index.html
+++ b/index.html
@@ -630,14 +630,11 @@
 					<div class="tile is-ancestor" style="padding: 0 18px 2rem 18px;">
 						<div class="tile is-parent is-horizontal">
 							<div class="tile is-child">
-								<figure class="image">
+								<figure class="video">
 									<video width="320" height="240" controls>
 										<source src="https://cdn.discordapp.com/attachments/807610088361164810/814588793599295508/VID_20210225_205915000.mp4" type=video/mp4>
 									</video>
 								</figure>
-								<video width="320" height="240" controls>
-									<source src="https://cdn.discordapp.com/attachments/807610088361164810/814588793599295508/VID_20210225_205915000.mp4" type=video/mp4>
-								</video>
 							</div>
 						</div>
 					</div>
