--- a/index.html
+++ b/index.html
@@ -631,7 +631,7 @@
 						<div class="tile is-parent is-horizontal">
 							<div class="tile is-child">
 								<figure class="video">
-									<video width="320" height="240" controls>
+									<video controls>
 										<source src="https://cdn.discordapp.com/attachments/807610088361164810/814588793599295508/VID_20210225_205915000.mp4" type=video/mp4>
 									</video>
 								</figure>
