--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
 						</div>
 					</div>
 					<p style="padding: 0 18px;">Création d'un petit code et hop, on test !</p>
-					<div class="tile is-ancestor" style="padding: 0 18px 2rem 18px;">
+					<div class="tile is-ancestor" style="padding: 0 0 2rem 0;">
 						<div class="tile is-parent is-horizontal">
 							<div class="tile is-child">
 								<figure class="video">
