--- a/index.html
+++ b/index.html
@@ -294,6 +294,16 @@
 								<div class="navbar-dropdown">
 									<div class="navbar-item dropdown is-hoverable">
 										<a class="navbar-link dropdown-trigger is-fullwidth"  style="width: 100%;">
+											26/02/2021
+										</a>
+										<div class="dropdown-menu drop2">
+											<a class="navbar-item" href="./#26022021-1">
+												Site - Responsive (enfin)
+											</a>
+										</div>
+									</div>
+									<div class="navbar-item dropdown is-hoverable">
+										<a class="navbar-link dropdown-trigger is-fullwidth"  style="width: 100%;">
 											25/02/2021
 										</a>
 										<div class="dropdown-menu drop2">
@@ -606,6 +616,14 @@
 					<p>Vous pouvez voir toutes les étapes à la réalisation du robot.</p>
 				</div>
 				<!-- 26/02/2021 : Site - Grace à l'aide d'une personne extérieure, le responsive est fonctionnel -->
+				<button type="button" class="collapsible" id="26022021-1">26/02/2021 - Site - Responsive (enfin)</button>
+				<div class="content collapse is-medium">
+					<p style="padding: 1rem 18px 0 18px;">Même la nuit on continue ! (Même si c'est plus le matin, très tôt là du coup.)</p>
+					<p style="padding: 0 18px;">On en avait marre de voir le site tout pété sur téléphone.</p>
+					<p style="padding: 0 18px;">Après des jours de modifications et tests sans succès, nous avons fait appel à un ami d'Antonin, Nenaff (de pseudo) qui nous a débloqué de notre situation.</p>
+					<p style="padding: 0 18px;">Les statistiques sont enfin bien mises. Tout le responsive est donc fonctionnel !</p>
+					<p style="padding: 0 18px 2rem 18px;">Fini les : "Je n'ai pas vu, c'est tout kc" :p<br><em>Même si personnne ne nous la dit.</em></p>
+				</div>
 				<button type="button" class="collapsible" id="25022021-1">25/02/2021 - "Hack" du servomoteur</button>
 				<div class="content collapse is-medium">
 					<p style="padding: 1rem 18px 0 18px;">Hé ouais on "hack" des servomoteurs nous ! Plus rien ne nous arrête (c'est faux).</p>
