--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
 					<h5>Purement pour le cours, nous devons respecter ces consignes :</h5>
 					<ul>
 						<li>Robot mobile</li>
-						<li>Radio commandée => Télécommande a réalisé avec un Arduino + Bluetooth + …</li>
+						<li>Télécommande => À réaliser avec un Arduino + Bluetooth + …</li>
 					</ul>
 					<h5>Comme composants que l'on doit intégrer il y a :</h5>
 					<ul>
