--- a/index.html
+++ b/index.html
@@ -615,6 +615,29 @@
 					<p>Dans cette section, vous pouvez admirer l'avancée du projet !</p>
 					<p>Vous pouvez voir toutes les étapes à la réalisation du robot.</p>
 				</div>
+				<button type="button" class="collapsible" id="26022021-2">26/02/2021 - Impression 3D - Bouton ON/OFF télécommande</button>
+				<div class="content collapse is-medium">
+					<p style="padding: 1rem 18px 0 18px;">Ugo a fait une impression 3D et a intégré le bouton ON/OFF pour la télécommande dedans.</p>
+					<p style="padding: 0 18px;">Comme déjà dit, Ugo fait la télécommande avec l'écran tactile TFT et Davide fait le tank.</p>
+					<p style="padding: 0 18px;">On allait quand même pas laisser Davide tout faire ! Non mais !</p>
+					<div class="tile is-ancestor" style="padding: 0 18px 2rem 18px;">
+						<div class="tile is-parent is-horizontal">
+							<div class="tile is-child">
+								<figure class="image">
+								</figure>
+							</div>
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/814570683316830239/IMG_20210225_195223.jpg" alt="Bonton on/off télécommande" style="padding: 0;">
+								</figure>
+							</div>
+							<div class="tile is-child">
+								<figure class="image">
+								</figure>
+							</div>
+						</div>
+					</div>
+				</div>
 				<button type="button" class="collapsible" id="26022021-1">26/02/2021 - Site - Responsive (enfin)</button>
 				<div class="content collapse is-medium">
 					<p style="padding: 1rem 18px 0 18px;">Même la nuit on continue ! (Même si c'est plus le matin, très tôt là du coup.)</p>
@@ -1018,13 +1041,13 @@
 				</div>
 				<button type="button" class="collapsible" id="22022021-2">22/02/2021 - Modélisation 3D - Télécommande</button>
 				<div class="content collapse is-medium">
-					<p style="padding: 1rem 18px 0 18px;">Après réflexion, nous avons trouvé une solution pour fermer la télécomande en reliant les deux planches (bois et plexiglass).</p>
+					<p style="padding: 1rem 18px 0 18px;">Après réflexion, nous avons trouvé une solution pour fermer la télécommande en reliant les deux planches (bois et plexiglass).</p>
 					<p style="padding: 0 18px;">Cela va être agréable à la vue est au touché normalement. On aura du bois pour le dessous, de l'impression 3D pour le coutour avec des arrondis, du plexiglass au dessus pour voir tous les composants.</p>
 					<div class="tile is-ancestor">
 						<div class="tile is-parent is-horizontal">
 							<div class="tile is-child">
 								<figure class="image">
-									<img src="https://media.discordapp.net/attachments/807610088361164810/813431082938007572/unknown.png" alt="Modélisation 3D de la télécomande finie" style="padding: 0;">
+									<img src="https://media.discordapp.net/attachments/807610088361164810/813431082938007572/unknown.png" alt="Modélisation 3D de la télécommande finie" style="padding: 0;">
 								</figure>
 							</div>
 						</div>
@@ -1075,7 +1098,7 @@
 				</div>
 				<button type="button" class="collapsible" id="21022021-2">21/02/2021 - Modélisation 3D - Télécommande</button>
 				<div class="content collapse is-medium">
-					<p style="padding: 1rem 18px 0 18px;">La machine Ugo, elle aussi lancée, continue la télécomande avec l'aide de Davide.</p>
+					<p style="padding: 1rem 18px 0 18px;">La machine Ugo, elle aussi lancée, continue la télécommande avec l'aide de Davide.</p>
 					<p style="padding: 0 18px;">Les travaux collossaux (à nos yeux) avance à pas de géants !</p>
 					<p style="padding: 0 18px;">Après de longs moments de réflexion, nous avons gardé le design du plan 2D. Nous somme arrivés sur une base plus petite que la partie du dessus.</p>
 					<p style="padding: 0 18px">Cela permet une bonne prise en main comme vous pouvez voir juste en dessous. Il manque tout le bord mais ça c'est plus un prochain épisode...</p>
@@ -1276,14 +1299,14 @@
 					<div class="tile is-parent is-horizontal">
 						<div class="tile is-child">
 							<figure class="image">
-								<img src="https://media.discordapp.net/attachments/501009071365685249/813434863888760902/unknown.png" alt="Modélisation 3D télécomande prototype">
+								<img src="https://media.discordapp.net/attachments/501009071365685249/813434863888760902/unknown.png" alt="Modélisation 3D télécommande prototype">
 							</figure>
 						</div>
 					</div>
 					<div class="tile is-parent is-horizontal">
 						<div class="tile is-child">
 							<figure class="image">
-								<img src="https://cdn.discordapp.com/attachments/807610088361164810/813431082938007572/unknown.png" alt="Modélisation 3D télécomande fin prototype">
+								<img src="https://cdn.discordapp.com/attachments/807610088361164810/813431082938007572/unknown.png" alt="Modélisation 3D télécommande fin prototype">
 							</figure>
 						</div>
 					</div>
