--- a/index.html
+++ b/index.html
@@ -297,6 +297,9 @@
 											26/02/2021
 										</a>
 										<div class="dropdown-menu drop2">
+											<a class="navbar-item" href="./#26022021-2">
+												Impression 3D - Bouton ON/OFF télécommande
+											</a>
 											<a class="navbar-item" href="./#26022021-1">
 												Site - Responsive (enfin)
 											</a>
@@ -620,6 +623,7 @@
 					<p style="padding: 1rem 18px 0 18px;">Ugo a fait une impression 3D et a intégré le bouton ON/OFF pour la télécommande dedans.</p>
 					<p style="padding: 0 18px;">Comme déjà dit, Ugo fait la télécommande avec l'écran tactile TFT et Davide fait le tank.</p>
 					<p style="padding: 0 18px;">On allait quand même pas laisser Davide tout faire ! Non mais !</p>
+					<p style="padding: 0 18px;">Il s'agit d'une des premières impressions sur l'imprimante 3D d'Ugo.</p>
 					<div class="tile is-ancestor" style="padding: 0 18px 2rem 18px;">
 						<div class="tile is-parent is-horizontal">
 							<div class="tile is-child">
@@ -628,7 +632,7 @@
 							</div>
 							<div class="tile is-child">
 								<figure class="image">
-									<img src="https://cdn.discordapp.com/attachments/807610088361164810/814570683316830239/IMG_20210225_195223.jpg" alt="Bonton on/off télécommande" style="padding: 0;">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/814777132831866890/image0.jpg" alt="Bonton on/off télécommande" style="padding: 0;">
 								</figure>
 							</div>
 							<div class="tile is-child">
