--- a/index.html
+++ b/index.html
@@ -297,6 +297,9 @@
 											26/02/2021
 										</a>
 										<div class="dropdown-menu drop2">
+											<a class="navbar-item" href="./#26022021-3">
+												PCB - Test avec plaque de cuivre
+											</a>
 											<a class="navbar-item" href="./#26022021-2">
 												Impression 3D - Bouton ON/OFF télécommande
 											</a>
@@ -617,6 +620,28 @@
 				<div class="content is-large">
 					<p>Dans cette section, vous pouvez admirer l'avancée du projet !</p>
 					<p>Vous pouvez voir toutes les étapes à la réalisation du robot.</p>
+				</div>
+				<button type="button" class="collapsible" id="26022021-3">26/02/2021 - PCB - Test avec plaque de cuivre</button>
+				<div class="content collapse is-medium">
+					<p style="padding: 1rem 18px 0 18px;">Ugo a une plaque de cuivre une face. Il lui était venu de faire un PCB (circuit imprimé) de test pour la télécommande avec.</p>
+					<p style="padding: 0 18px;">Pour crer le PCB, il a une CNC, le but aurait été d'enlever là couche de cuivre en retirant avec une fraise pour faire notre circuit.</p>
+					<p style="padding: 0 18px;">Il s'agit d'une plaque une face, spécialement prévue pour faire des PCB à la CNC.</p>
+					<p style="padding: 0 18px;">Je veux bien que nous soyons des fous mais quand même !</p>
+					<div class="tile is-ancestor">
+						<div class="tile is-parent is-horizontal">
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://media.discordapp.net/attachments/807610088361164810/814786945678966794/image0.jpg" alt="Bonton on/off télécommande" style="padding: 0;">
+								</figure>
+							</div>
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://media.discordapp.net/attachments/807610088361164810/814786985986228244/image0.jpg" alt="Bonton on/off télécommande" style="padding: 0;">
+								</figure>
+							</div>
+						</div>
+					</div>
+					<p style="padding: 0 18px 2rem 18px;">SPOILER : Nous ne l'utiliserons jamais au final 😅</p>
 				</div>
 				<button type="button" class="collapsible" id="26022021-2">26/02/2021 - Impression 3D - Bouton ON/OFF télécommande</button>
 				<div class="content collapse is-medium">
