--- a/index.html
+++ b/index.html
@@ -297,6 +297,9 @@
 											26/02/2021
 										</a>
 										<div class="dropdown-menu drop2">
+											<a class="navbar-item" href="./#26022021-4">
+												Modélisation et impression 3D et CNC - Plaque de devant et ultrason
+											</a>
 											<a class="navbar-item" href="./#26022021-3">
 												PCB - Test avec plaque de cuivre
 											</a>
@@ -621,6 +624,88 @@
 					<p>Dans cette section, vous pouvez admirer l'avancée du projet !</p>
 					<p>Vous pouvez voir toutes les étapes à la réalisation du robot.</p>
 				</div>
+				<button type="button" class="collapsible" id="26022021-4">26/02/2021 - Modélisation et impression 3D et CNC - Plaque de devant et ultrason</button>
+				<div class="content collapse is-medium">
+					<p style="padding: 1rem 18px 0 18px;">La machine Davide s'est remise en route à 3000 à l'heure !</p>
+					<p style="padding: 0 18px;">À commencer par la réalisation 3D du support de l'ultrason.</p>
+					<div class="tile is-ancestor">
+						<div class="tile is-parent is-horizontal">
+							<div class="tile is-child">
+								<figure class="image">
+								</figure>
+								<figure class="image">
+									<img src="https://media.discordapp.net/attachments/807610088361164810/814835673018269716/unknown.png" alt="Modélisation 3D support ultrason" style="padding: 0;">
+								</figure>
+								<figure class="image">
+								</figure>
+							</div>
+						</div>
+					</div>
+					<p style="padding: 0 18px;">S'en suit par l'impression 3D de ce support !</p>
+					<div class="tile is-ancestor">
+						<div class="tile is-parent is-horizontal">
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/814903399895793685/IMG_20210226_171004.jpg" alt="Impression 3D support ultrason" style="padding: 0;">
+								</figure>
+							</div>
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/814903423878823976/IMG_20210226_171029.jpg" alt="Impression 3D support ultrason" style="padding: 0;">
+								</figure>
+							</div>
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/814903447047372810/IMG_20210226_171035.jpg" alt="Impression 3D support ultrason" style="padding: 0;">
+								</figure>
+							</div>
+						</div>
+					</div>
+					<p style="padding: 0 18px;">Après, place à la découpe de la planche de la face avant ! Sans oublier les trous pour les yeux du tank ! Ou plutôt les "haut-parleurs" de l'ultrason.</p>
+					<p style="padding: 0 18px;">Et elle est PARFAITE ! ;) Notre tank prend forme ! Du moins pour la base.</p>
+					<div class="tile is-ancestor">
+						<div class="tile is-parent is-horizontal">
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/814903528639954944/IMG_20210226_171424.jpg" alt="Plaque avec le support ultrason" style="padding: 0;">
+								</figure>
+							</div>
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/814903549833773066/IMG_20210226_171431.jpg" alt="Plaque avec le support ultrason" style="padding: 0;">
+								</figure>
+							</div>
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/814903474352685056/IMG_20210226_171116.jpg" alt="Tank avec plaque ultrason" style="padding: 0;">
+								</figure>
+							</div>
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/814903502303395890/IMG_20210226_171129.jpg" alt="Tank avec plaque ultrason" style="padding: 0;">
+								</figure>
+							</div>
+						</div>
+					</div>
+					<p style="padding: 0 18px;">Vous l'avez peut-être vu, la dernière plaque pour le devant est faite !</p>
+					<p style="padding: 0 18px;">Effectivement, après une petite découpe à la CNC, la voici !</p>
+					<p style="padding: 0 18px;">C'est une sacré bête ! Avec 359g (et c'est pas de la drogue, on ne serait plus là sinon).</p>
+					<p style="padding: 0 18px;">Funfact : Le téléphone du papa de Davide a à peine 40g en moins ! Après c'est sûr que le tank est quasi vide et sans tourelle là !</p>
+					<div class="tile is-ancestor" style="padding: 0 0 2rem 0;">
+						<div class="tile is-parent is-horizontal">
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/814903576932515850/IMG_20210226_175338.jpg" alt="Tank avec l'avant fini" style="padding: 0;">
+								</figure>
+							</div>
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://media.discordapp.net/attachments/807610088361164810/814917105308532746/IMG_20210226_184447.jpg" alt="Poid du tank avec l'avant fini" style="padding: 0;">
+								</figure>
+							</div>
+						</div>
+					</div>
+				</div>
 				<button type="button" class="collapsible" id="26022021-3">26/02/2021 - PCB - Test avec plaque de cuivre</button>
 				<div class="content collapse is-medium">
 					<p style="padding: 1rem 18px 0 18px;">Ugo a une plaque de cuivre une face. Il lui était venu de faire un PCB (circuit imprimé) de test pour la télécommande avec.</p>
@@ -631,12 +716,12 @@
 						<div class="tile is-parent is-horizontal">
 							<div class="tile is-child">
 								<figure class="image">
-									<img src="https://media.discordapp.net/attachments/807610088361164810/814786945678966794/image0.jpg" alt="Bonton on/off télécommande" style="padding: 0;">
+									<img src="https://media.discordapp.net/attachments/807610088361164810/814786945678966794/image0.jpg" alt="Plaque cuivrée pour CNC" style="padding: 0;">
 								</figure>
 							</div>
 							<div class="tile is-child">
 								<figure class="image">
-									<img src="https://media.discordapp.net/attachments/807610088361164810/814786985986228244/image0.jpg" alt="Bonton on/off télécommande" style="padding: 0;">
+									<img src="https://media.discordapp.net/attachments/807610088361164810/814786985986228244/image0.jpg" alt="Plaque cuivrée pour CNC" style="padding: 0;">
 								</figure>
 							</div>
 						</div>
@@ -1497,6 +1582,75 @@
 						<div class="tile is-child">
 							<figure class="image">
 								<img src="https://cdn.discordapp.com/attachments/807610088361164810/814570683316830239/IMG_20210225_195223.jpg" alt="Hack servomoteur">
+							</figure>
+						</div>
+					</div>
+				</div>
+				<div class="tile is-ancestor">
+					<div class="tile is-parent is-horizontal">
+						<div class="tile is-child">
+							<figure class="image">
+								<img src="https://cdn.discordapp.com/attachments/807610088361164810/814777132831866890/image0.jpg" alt="Bonton on/off télécommande">
+							</figure>
+						</div>
+					</div>
+					<div class="tile is-parent is-horizontal">
+						<div class="tile is-child">
+							<figure class="image">
+								<img src="https://media.discordapp.net/attachments/807610088361164810/814835673018269716/unknown.png" alt="Modélisation 3D support ultrason">
+							</figure>
+						</div>
+					</div>
+					<div class="tile is-parent is-horizontal">
+						<div class="tile is-child">
+							<figure class="image">
+								<img src="https://cdn.discordapp.com/attachments/807610088361164810/814903423878823976/IMG_20210226_171029.jpg" alt="Impression 3D support ultrason">
+							</figure>
+						</div>
+					</div>
+				</div>
+				<div class="tile is-ancestor">
+					<div class="tile is-parent is-horizontal">
+						<div class="tile is-child">
+							<figure class="image">
+								<img src="https://cdn.discordapp.com/attachments/807610088361164810/814903447047372810/IMG_20210226_171035.jpg" alt="Impression 3D support ultrason">
+							</figure>
+						</div>
+					</div>
+					<div class="tile is-parent is-horizontal">
+						<div class="tile is-child">
+							<figure class="image">
+								<img src="https://cdn.discordapp.com/attachments/807610088361164810/814903528639954944/IMG_20210226_171424.jpg" alt="Plaque avec le support ultrason">
+							</figure>
+						</div>
+					</div>
+					<div class="tile is-parent is-horizontal">
+						<div class="tile is-child">
+							<figure class="image">
+								<img src="https://cdn.discordapp.com/attachments/807610088361164810/814903474352685056/IMG_20210226_171116.jpg" alt="Tank avec plaque ultrason">
+							</figure>
+						</div>
+					</div>
+				</div>
+				<div class="tile is-ancestor">
+					<div class="tile is-parent is-horizontal">
+						<div class="tile is-child">
+							<figure class="image">
+								<img src="https://cdn.discordapp.com/attachments/807610088361164810/814903502303395890/IMG_20210226_171129.jpg" alt="Tank avec plaque ultrason">
+							</figure>
+						</div>
+					</div>
+					<div class="tile is-parent is-horizontal">
+						<div class="tile is-child">
+							<figure class="image">
+								<img src="https://cdn.discordapp.com/attachments/807610088361164810/814903576932515850/IMG_20210226_175338.jpg" alt="Tank avec l'avant fini">
+							</figure>
+						</div>
+					</div>
+					<div class="tile is-parent is-horizontal">
+						<div class="tile is-child">
+							<figure class="image">
+								<img src="https://media.discordapp.net/attachments/807610088361164810/814917105308532746/IMG_20210226_184447.jpg" alt="Poid du tank avec l'avant fini">
 							</figure>
 						</div>
 					</div>
