--- a/index.html
+++ b/index.html
@@ -632,11 +632,7 @@
 						<div class="tile is-parent is-horizontal">
 							<div class="tile is-child">
 								<figure class="image">
-								</figure>
-								<figure class="image">
-									<img src="https://media.discordapp.net/attachments/807610088361164810/814835673018269716/unknown.png" alt="Modélisation 3D support ultrason" style="padding: 0;">
-								</figure>
-								<figure class="image">
+									<img src="https://media.discordapp.net/attachments/807610088361164810/814835673018269716/unknown.png" alt="Modélisation 3D support ultrason" style="padding: 0; height: 500px; width: auto;">
 								</figure>
 							</div>
 						</div>
